Submenu actions don't seem to be activated
GTK 4.0.3 or 4.1.1
A populate_menu
-like action handler no longer seems to be called when switching from GTK 3 to GTK 4, while submenu actions are still documented in https://developer.gnome.org/gtk4/stable/GtkPopoverMenu.html.
I can provide a minimal program to better explain what I'm talking about and reproduce the issue if needed.