Set the state of submenu actions

Although it is not necessary in the current state of GTK 3, it may
become necessary in GTK 4, and it is anyway up to the "change-state"
signal handler to set the state of a GSimpleAction.

Related to https://gitlab.gnome.org/GNOME/gtk/-/issues/3721